  of all children. (Greg Miller)

* GITHUB#11772: Removed native subproject and WindowsDirectory implementation from lucene.misc. Recommendation:
  use MMapDirectory implementation on Windows. (Robert Muir, Uwe Schindler, Dawid Weiss)

* GITHUB#11804: FacetsCollector#collect is no longer final, allowing extension. (Greg Miller)

Improvements
---------------------
* GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
  is now tagged. (Namgyu Kim)

* GITHUB#11785: Improve Tessellator performance by delaying calls to the method
  #isIntersectingPolygon (Ignacio Vera)

* GITHUB#687: speed up IndexSortSortedNumericDocValuesRangeQuery#BoundedDocIdSetIterator
  construction using bkd binary search. (Jianping Weng)

Bug Fixes
---------------------
* GITHUB#11726: Indexing term vectors on large documents could fail due to
  trying to apply a dictionary whose size is greater than the maximum supported
  window size for LZ4. (Adrien Grand)

* GITHUB#11768: Taxonomy and SSDV faceting now correctly breaks ties by preferring smaller ordinal
  values. (Greg Miller)

* GITHUB#11807: Don't rewrite queries in unified highlighter. (Alan Woodward)

Optimizations
---------------------
* GITHUB#11738: Optimize MultiTermQueryConstantScoreWrapper when a term is present that matches all
  docs in a segment. (Greg Miller)

* GITHUB#11735: KeywordRepeatFilter + OpenNLPLemmatizer always drops last token of a stream.
  (Luke Kot-Zaniewski)

* GITHUB#11771: KeywordRepeatFilter + OpenNLPLemmatizer sometimes arbitrarily exits token stream.
  (Luke Kot-Zaniewski)

* GITHUB#11803: DrillSidewaysScorer has improved to leverage "advance" instead of "next" where
  possible, and splits out first and second phase checks to delay match confirmation. (Greg Miller)

* GITHUB#11828: Tweak TermInSetQuery "dense" optimization to only require all terms present in a
  given field to match a term (rather than all docs in a segment). This is consistent with