@@ -98,6 +98,9 @@ API Changes
 
 * GITHUB#11804: FacetsCollector#collect is no longer final, allowing extension. (Greg Miller)
 
+* GITHUB#11761: TieredMergePolicy now allowed a maximum allowable deletes percentage of down to 5%, and the default
+  maximum allowable deletes percentage is changed from 33% to 20%. (Marc D'Mello)
+
 Improvements
 ---------------------
 * GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
